# parserserver

./: CMakeLists.txt  JsonParser.hxx  Node.cxx  Node.hxx  NodeTranslator.cxx  NodeTranslator.hxx  Parser.hxx  ParsersController.cxx  ParsersController.hxx  Server.cxx  Server.hxx  YamlParser.hxx  conanfile.txt  config.json  config.yaml  main.cxx  outconfig.yaml  plan.md  test.json  testconfig.yaml
